# pokemon

./: .flake8  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
pokemon/: gather.py  process.py  schemas.py  serve.py
tests/: conftest.py  test_parsing.py  test_processing.py
