[tool.poetry]
name = "pokemon"
version = "0.1.0"
description = ""
authors = ["Kirk Sweeney <kirk.sweeney@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
streamlit = "^1.15.2"

[tool.poetry.group.dev.dependencies]
pyspark = "^3.3.1"
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^22.10.0"
pytest = "^7.2.0"
pylint = "^2.15.7"
types-requests = "^2.28.11.5"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
